update code and fix bug

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   flutter_native_splash: ^2.3.8
+  http: ^1.1.2
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -109,3 +111,5 @@ flutter:
     - assets/error_image.png
     - assets/no_result.png
     - assets/growing_ring.gif
+    - assets/network_error.png
+    - assets/user.png
