--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,17 @@ dependencies:
   flutter_native_splash: ^2.3.8
   http: ^1.1.2
   provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  sqflite: ^2.3.0
+  intl: ^0.19.0
+  flutter_local_notifications: ^16.2.0
+  rxdart: ^0.27.7
+  android_alarm_manager_plus: ^3.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  mockito: ^5.4.4
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -113,3 +120,4 @@ flutter:
     - assets/growing_ring.gif
     - assets/network_error.png
     - assets/user.png
+    - assets/empty_data.png
